tests/ui/borrowck/borrowck-ref-mut-of-imm.stderr
error[E0596]: cannot borrow `x.0` as mutable, as `x` is not declared as mutable
  --> $DIR/borrowck-ref-mut-of-imm.rs:4:12
   |
LL |       Some(ref mut v) => *v
   |            ^^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn destructure(mut x: Option<isize>) -> isize {
   |                +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
